--- a/app/src/main/res/layout/application_row.xml
+++ b/app/src/main/res/layout/application_row.xml
@@ -23,8 +23,19 @@
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="20sp"
     android:textSize="16sp"
-    app:layout_constraintBottom_toBottomOf="parent"
+    android:textStyle="bold"
     app:layout_constraintLeft_toRightOf="@id/img_app"
     app:layout_constraintRight_toRightOf="parent"
     app:layout_constraintTop_toTopOf="parent" />
+
+  <TextView
+    android:id="@+id/package_name_app"
+    android:layout_width="0sp"
+    android:layout_height="wrap_content"
+    android:textSize="12sp"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintLeft_toLeftOf="@id/name_app"
+    app:layout_constraintRight_toRightOf="@id/name_app"
+    app:layout_constraintTop_toBottomOf="@id/name_app" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
