--- a/app/src/main/res/layout/container_installed_apps.xml
+++ b/app/src/main/res/layout/container_installed_apps.xml
@@ -1,31 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:app="http://schemas.android.com/apk/res-auto"
-  xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  tools:context=".fragment.MainFragment">
-
-  <ProgressBar
-    android:id="@+id/progress_apps"
-    style="?android:attr/progressBarStyle"
-    android:layout_width="wrap_content"
+  xmlns:app="http://schemas.android.com/apk/res-auto">
+  <TextView
+    android:id="@+id/txt_installed"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:layout_constraintBottom_toBottomOf="parent"
+    android:layout_margin="12sp"
+    android:text=""
+    android:textSize="24sp"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent"
     app:layout_constraintTop_toTopOf="parent" />
 
-
-  <!--  TODO TabLayout with ViewPager for installed and on disk-->
-
-  <include
-    android:id="@+id/container_installed_apps"
-    layout="@layout/container_installed_apps"
+  <androidx.recyclerview.widget.RecyclerView
+    android:id="@+id/list_app"
+    android:layout_width="match_parent"
+    android:layout_height="0sp"
+    android:layout_margin="12sp"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintTop_toTopOf="parent" />
-
-
+    app:layout_constraintTop_toBottomOf="@id/txt_installed" />
 </androidx.constraintlayout.widget.ConstraintLayout>
