--- a/app/src/main/res/layout/fragment_disk_app_list.xml
+++ b/app/src/main/res/layout/fragment_disk_app_list.xml
@@ -4,28 +4,26 @@
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  tools:context=".fragment.MainFragment">
+  tools:context=".fragment.DiskAppListFragment">
 
-  <LinearLayout
-    android:id="@+id/container_app"
+  <androidx.recyclerview.widget.RecyclerView
+    android:id="@+id/list_app"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:layout_margin="12sp"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintTop_toTopOf="parent">
+    app:layout_constraintTop_toBottomOf="parent" />
 
-    <com.google.android.material.tabs.TabLayout
-      android:id="@+id/tab_layout_app"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content" />
-
-    <androidx.viewpager2.widget.ViewPager2
-      android:id="@+id/view_pager_app"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent" />
-  </LinearLayout>
-
-
+  <ProgressBar
+    android:id="@+id/progressBar"
+    style="?android:attr/progressBarStyle"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:visibility="gone"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintRight_toRightOf="parent"
+    app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
