simplify some field name

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -24,7 +24,7 @@
     android:label="@string/label_application_detail_fragment"
     tools:layout="@layout/fragment_application_detail">
     <argument
-      android:name="packageName"
+      android:name="source"
       app:argType="string" />
   </fragment>
 </navigation>
