--- a/app/src/main/res/layout/application_row.xml
+++ b/app/src/main/res/layout/application_row.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
+  android:id="@+id/app_row_layout"
   android:layout_width="match_parent"
   android:layout_height="wrap_content"
-  android:padding="16sp"
-  android:id="@+id/app_row_layout"
   android:clickable="true"
-  android:focusable="true">
+  android:focusable="true"
+  android:padding="16sp">
 
   <ImageView
     android:id="@+id/img_app"
@@ -37,5 +37,4 @@
     app:layout_constraintLeft_toLeftOf="@id/name_app"
     app:layout_constraintRight_toRightOf="@id/name_app"
     app:layout_constraintTop_toBottomOf="@id/name_app" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
