--- a/app/src/main/res/layout/fragment_application_detail.xml
+++ b/app/src/main/res/layout/fragment_application_detail.xml
@@ -13,6 +13,24 @@
     app:layout_constraintRight_toRightOf="parent"
     app:layout_constraintTop_toTopOf="parent" />
 
-  <!--  TODO ViewPager2-->
+  <LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="0sp"
+    android:layout_margin="12sp"
+    android:orientation="vertical"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintRight_toRightOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/app_head">
 
+    <com.google.android.material.tabs.TabLayout
+      android:id="@+id/app_tabs"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content" />
+
+    <androidx.viewpager2.widget.ViewPager2
+      android:id="@+id/app_pager"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent" />
+  </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
