--- a/app/src/main/res/layout/fragment_application_info.xml
+++ b/app/src/main/res/layout/fragment_application_info.xml
@@ -4,13 +4,20 @@
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  tools:context=".MainActivity">
+  tools:context=".fragment.ApplicationInfoFragment">
 
-  <androidx.fragment.app.FragmentContainerView
-    android:id="@+id/nav_host"
-    android:name="androidx.navigation.fragment.NavHostFragment"
+  <ScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:defaultNavHost="true"
-    app:navGraph="@navigation/nav_graph" />
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintRight_toRightOf="parent"
+    app:layout_constraintTop_toTopOf="parent">
+
+    <TextView
+      android:id="@+id/txt_info"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:textSize="30sp" />
+  </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
