--- a/app/src/main/res/layout/fragment_installed_app_list.xml
+++ b/app/src/main/res/layout/fragment_installed_app_list.xml
@@ -6,15 +6,55 @@
   android:layout_height="match_parent"
   tools:context=".fragment.InstalledAppListFragment">
 
-  <androidx.recyclerview.widget.RecyclerView
-    android:id="@+id/list_app"
+  <!--  soon will be changed to NestedScrollView-->
+  <ScrollView
+    android:id="@+id/container_list_app"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="12sp"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintTop_toBottomOf="parent" />
+    app:layout_constraintTop_toTopOf="parent">
+
+    <LinearLayout
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:orientation="vertical">
+
+      <TextView
+        android:id="@+id/txt_user_app"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:focusable="true"
+        android:paddingVertical="5sp"
+        android:text="@string/text_installed_user_apps"
+        android:textSize="16sp"
+        android:textStyle="bold" />
+
+      <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/list_user_app"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+      <TextView
+        android:id="@+id/txt_system_app"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:focusable="true"
+        android:paddingVertical="5sp"
+        android:text="@string/text_installed_system_apps"
+        android:textSize="16sp"
+        android:textStyle="bold" />
+
+      <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/list_system_app"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    </LinearLayout>
+  </ScrollView>
 
   <ProgressBar
     android:id="@+id/progressBar"
