--- a/app/src/main/res/layout/application_row.xml
+++ b/app/src/main/res/layout/application_row.xml
@@ -29,7 +29,7 @@
     app:layout_constraintTop_toTopOf="parent" />
 
   <TextView
-    android:id="@+id/package_name_app"
+    android:id="@+id/source_app"
     android:layout_width="0sp"
     android:layout_height="wrap_content"
     android:textSize="12sp"
