--- a/app/src/main/res/layout/fragment_application_info.xml
+++ b/app/src/main/res/layout/fragment_application_info.xml
@@ -6,20 +6,10 @@
   android:layout_height="match_parent"
   tools:context=".fragment.ApplicationInfoFragment">
 
-  <ScrollView
+  <androidx.recyclerview.widget.RecyclerView
+    android:id="@+id/list_app_info"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintLeft_toLeftOf="parent"
-    app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintTop_toTopOf="parent">
-
-    <TextView
-      android:id="@+id/txt_info"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:textSize="30sp" />
-  </ScrollView>
+    android:layout_height="match_parent" />
 
   <ProgressBar
     android:id="@+id/progressBar"
