--- a/app/src/main/res/layout/info_row.xml
+++ b/app/src/main/res/layout/info_row.xml
@@ -2,20 +2,24 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   android:layout_width="match_parent"
-  android:layout_height="wrap_content">
+  android:layout_height="wrap_content"
+  android:padding="12sp">
 
   <TextView
-    android:id="@+id/segment_header"
-    android:layout_width="match_parent"
+    android:id="@+id/info_name"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@color/purple_500"
-    android:clickable="true"
-    android:focusable="true"
-    android:padding="12sp"
-    android:textSize="16sp"
     android:textStyle="bold"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintTop_toTopOf="parent" />
+
+  <TextView
+    android:id="@+id/info_content"
+    android:layout_width="0sp"
+    android:layout_height="wrap_content"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintLeft_toRightOf="@id/info_name"
     app:layout_constraintRight_toRightOf="parent"
     app:layout_constraintTop_toTopOf="parent" />
 
